<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="weather_data" Id="{ccf57e60-4f22-4d7c-847f-e6282d64f75e}">
    <Declaration><![CDATA[TYPE weather_data :
STRUCT
	student_id  : DINT := 12202053; 
	last        : STRING(64) := 'jaworski';
   	first       : STRING(64) := 'oliwier';
    sLocation 	: ARRAY[1..4] OF STRING(255);
	
	city      	: STRING(64);
    id          : UDINT;
    temp        : LREAL;
    temp_min    : FLOAT;
    temp_max    : FLOAT;
    sunrise     : UDINT;
    sunset      : UDINT;
	
	uLocIndex		: UINT :=0;
    sJsonParsed     : STRING(2048);
	
	allow_processing : BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>